hide after animation ends

--- a/notification.component.html
+++ b/notification.component.html
@@ -1,4 +1,4 @@
-<div class="notification">
+<div class="notification" *ngIf="isShow">
     <div class="notification__container">
         <svg 
             *ngIf="status === 'success'"
